# Capstone_RhythmGame

./: .asm-lsp.toml  .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakeSettings.json  Capstone_RhythmGame.sln  Capstone_RhythmGame.vcxproj  Capstone_RhythmGame.vcxproj.filters  LICENSE.txt  README.md  main.cpp
.github/workflows/: msvc.yml
.run/: Final Report.run.xml  Proposal Bibliography.run.xml  Proposal.run.xml
Test/: Test.vcxproj  Test.vcxproj.filters  input_handler_test.cpp  os_test.cpp
cmake/: FetchNASM.cmake
include/: assets.h  audio.h  ecs.h  game.h  input.h  input_handler.h  maths.h  os.h  scene.h  state.h  system.h  utils.h
include/assets/: asset_type.h
include/ecs/: component_base.h  component_manager.h  component_pool.h  component_store.h  entity.h  entity_generator.h  entity_manager.h  system.h  system_manager.h  world.h
include/ecs/bck/: component_pool.h  system_function.h
include/game/: components.h  draw_description.h  scene.h  systems.h  utils.h
include/game/components/: angular_velocity.h  input.h  position.h  rotation.h  sound.h  velocity.h
include/game/components/audio/: audio.h  audio_component.h
include/game/components/battle/: battle_object.h  battlestate.h  border.h  bullet_data.h  hpbar.h  score.h  (+4 more)
include/game/scene/: scene_meta.h
include/game/systems/: animation_system.h  bullet_system.h  check_player_state.h  global_clock.h  handle_bpm.h  handle_miss_note.h  handle_rhythm.h  handle_ui.h  input_system.h  load_notes.h  movement_system.h  particle_system.h  phase_change.h  phase_change_effect.h  playback_system.h  player_system.h  update_score.h
include/game/utils/: audio_util.h  bullet_data_reader.h  constant.h  levelDSL_registry.h  load_notes.h  pattern_container.h  physics_util.h
include/maths/: color.h  point.h  types.h  uv.h  vector2.h
include/scene/: battle_scene.h  benchmark.h  demo.h  demo2.h  demo_bullethell.h  demo_game.h  demo_menu.h  demo_overworld.h  demo_render.h  demo_rhythm.h  demo_scene_change.h  demo_world.h  level1.h  level2.h  rhythm.h  scene_decl.h  scene_manager.h
include/scene/creation_tools/: macros.h  tools.h
include/system/: asset_manager.h  atomic.h  audio.h  compositor.h  config.h  dx11_adapter.h  ecs.h  ecs_functions.h  ecs_types.h  game.h  input.h  intent_storage.h  os.h  renderer.h  thread.h  window.h
include/system/ecs/: ecs_types.h  query.h  resource_manager.h  resource_pool.h  syscall.h  task_manager.h
include/system/renderer/: renderer_directx.h  renderer_functions.h  renderer_queue.h  renderer_types.h  vertex_generator.h  vertex_generator_queue.h  win32.h
include/utils/: crc.h  from_tuple_t.h  input_attribute_description.h  load_file.h  load_png.h  macros.h  parse_glyph.h  print_debug.h  scene_utils.h  str_utils.h
papers/IEEE/: main.tex  refs.bib
papers/final_report/: main.tex  refs.bib
papers/final_report/sections/: abstract.tex  coding_standard.tex  conclusion.tex  design.tex  ethics.tex  implementation.tex  introduction.tex  planned_work_one_column.tex  planned_work_two_column.tex  related_work.tex  results.tex  results_one_column.tex  results_one_column_two.tex  results_two_column.tex  risk_and_resource.tex  team_one_column.tex  team_two_column.tex  testing.tex  timeline_one_column.tex  title.tex
papers/proposal/: main.tex  refs.bib
papers/proposal/sections/: abstract.tex  code_of_conduct.tex  design.tex  document_standard.tex  ethics.tex  feasibility.tex  introduction.tex  planned_work.tex  planned_work_one_column.tex  related_work.tex  team.tex  team_one_column.tex  team_two_column.tex  timeline_one_column.tex  timeline_two_column.tex  title.tex
shaders/: CMakeLists.txt
shaders/ps/: default.hlsl  rainbow.hlsl  sprite.hlsl  text.hlsl
shaders/vs/: default.hlsl  rainbow.hlsl  sprite.hlsl
src/: input_handler.cpp  main.cpp  os.cpp
src/assets_manager/: CMakeLists.txt  assets_manager.c  assets_manager.h  parse_glyph.c
src/audio/: CMakeLists.txt  audio.c
src/dsl_reader/: CMakeLists.txt  bullet_data_reader.cpp  bullet_script.cpp  interpreter.cpp  parser.cpp  tokenizer.cpp
src/ecs/: CMakeLists.txt  component_manager.cpp  component_store.cpp  entity_manager.cpp  system_manager.cpp
src/engine/: CMakeLists.txt  asset_manager.cpp  game.cpp  input.cpp  input_handler.cpp  intent_storage.cpp  os.cpp  renderer.cpp  renderer_directx.cpp  win32.cpp  window.cpp
src/maths/: CMakeLists.txt  vector2.cpp
src/renderer/: CMakeLists.txt  compositor.cpp  dx11_adapter.cpp  intent_storage.c  intent_storage.cpp
src/scene/: CMakeLists.txt  battle_scene.cpp  benchmark.cpp  demo.cpp  demo2.cpp  demo_bullethell.cpp  demo_game.cpp  demo_menu.cpp  demo_overworld.cpp  demo_render.cpp  demo_rhythm.cpp  demo_scene_change.cpp  demo_world.cpp  intent_storage.cpp  level1.cpp  level2.cpp  rhythm.cpp  scene_manager.cpp
src/utils/: CMakeLists.txt  print_debug.cpp
src/vertex_generator/: CMakeLists.txt  vertex_generator.c
src/windows/: CMakeLists.txt  windows_directx.h  windows_functions.c  windows_functions.h  windows_input.c  windows_main.c  windows_scenes.h  windows_thread.c  windows_types.h
src/windows/audio/: CMakeLists.txt  audio.c  audio.h  os_audio.c  os_audio.h
src/windows/directx/: CMakeLists.txt  assets_manager.cpp  device_resources.cpp  device_resources.hpp  directx_api.cpp  directx_api.h  directx_manager.cpp  directx_manager.hpp  dx11_adapter.cpp  dx11_adapter.h  dx11_adapter_api.cpp  dx11_adapter_api.h  render_object.h  renderer.cpp  renderer.h  renderer_types.h
src/windows/intent_storage/: CMakeLists.txt
src/windows/scenes/: CMakeLists.txt  compositor_api.cpp  compositor_api.h  dx11_adapter_api.cpp  dx11_adapter_api.h  intent_api.cpp  intent_api.h  scenes_api.cpp  scenes_api.h
src/windows/utils/: CMakeLists.txt  windows_utils.c  windows_utils.h
src/windows/utils/asm/: CMakeLists.txt  memcpy.asm  memset.asm
test/: CMakeLists.txt  asset_manager_test.cpp  directxmath_test.cpp  ecs_test.cpp  game_test.cpp  input_handler_test.cpp  input_test.cpp  intent_storage_test.cpp  os_test.cpp  rhythm_test.cpp  state_test.cpp  vector2_test.cpp  window_test.cpp
(+188 files in other folders)
